# anoEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  azure-pipelines.yml  chessExample
api/: CMakeLists.txt  anoEngine.cpp  anoEngine.hpp  ezEngine.cpp  ezEngine.hpp  ezEngine_python.cpp  ezPyEngine.cpp
api/python/: CMakeLists.txt  anoPyEngine.cpp  ezPyEngine.cpp
api/types/: types.hpp
assets/scripts/: assets.lua  chessboard_setup.lua  config.lua  default_setup.lua
cmake/: Copyright.txt  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  README.md
examples/Chess/: CMakeLists.txt  Makefile
examples/Chess/assets/scripts/: assets.lua  default_setup.lua  other_default_setup.lua
examples/Chess/src/: Chess.cpp  Chess.hpp  Chessboard.cpp  Chessboard.hpp  Chesspiece.hpp  Constants.cpp  Constants.hpp  Main.cpp  PlayersTurn.cpp  PlayersTurn.hpp
examples/Chess/src/Movements/: Bishop.hpp  King.hpp  Knight.hpp  Movement.hpp  MovementsFactory.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
examples/debug_playground/assets/scripts/: playerMovement.lua
examples/debug_playground/cpp/: main.cpp
examples/debug_playground/map/: tilemap.map
examples/debug_playground/python/: playground.py
examples/debug_playground/src/: main.cpp
examples/playground/src/: main.cpp
examples/pyBird/: flappyBird.py  pyBird.py  test.py
examples/pyBird/assets/scripts/: playerMovement.lua
examples/python/: create_window.py
examples/tilemap/: tiles.py
examples/tilemap/assets/map/: tilemap.json  tilemap.lua
src/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  ChessBoard.cpp  ChessBoard.hpp  ChessController.cpp  ChessController.hpp  Constants.cpp  Constants.hpp  DrawManager.cpp  DrawManager.hpp  FontManager.cpp  FontManager.hpp  Game.cpp  Game.hpp  Log.cpp  Log.hpp  Main.cpp  SimpleChess.cpp  SimpleChess.hpp  TextureManager.cpp  TextureManager.hpp  UserInputs.hpp
src/Chess/: Chess.cpp  Chess.hpp  Chessboard.cpp  Chessboard.hpp  PlayersTurn.cpp  PlayersTurn.hpp  State.hpp
src/Chess/Movements/: Bishop.hpp  King.hpp  Knight.hpp  Movement.hpp  Movements.hpp  MovementsFactory.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
src/Chesscontroller/: Chesscontroller.cpp  Chesscontroller.hpp  PlayersTurn.cpp  PlayersTurn.hpp  Promotion.cpp  Promotion.hpp  State.hpp  Validate.cpp  Validate.hpp
src/Components/: ChesspieceComponent.hpp  ColliderComponent.hpp  Component.hpp  ComponentManager.hpp  Components.hpp  ControlComponent.hpp  DrawComponent.hpp  PositionComponent.hpp  PromotionComponent.hpp  SpriteComponent.hpp  SquareComponent.hpp  TextlabelComponent.hpp  TileComponent.hpp  TileMapComponent.hpp  TransformComponent.hpp  UserInputComponent.hpp  ValidationComponent.hpp
src/Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/Movements/: Bishop.hpp  King.hpp  Knight.hpp  Movements.hpp  MovementsFactory.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
src/Statemachine/: BlackTurn.cpp  BlackTurn.hpp  PlayersTurn.hpp  StateMachine.cpp  Statemachine.hpp  WhiteTurn.cpp  WhiteTurn.hpp
src/Systems/: CollisionSystem.hpp  PositionSystem.hpp  SpriteSystem.hpp  System.hpp  SystemsManager.hpp  TextlabelSystem.hpp  TileMapSystem.hpp  TileSystem.hpp  TransformSystem.hpp  UserControlSystem.hpp  UserInputSystem.hpp
src/TileMap/: JsonMap.hpp  LuaMap.hpp  Map.hpp  MapFactory.hpp
